hard-gists/11375647/run.log
=== Docker Run Log for 11375647 ===
Started at: Mi 29. Okt 11:56:00 CET 2025

[2025-10-29 11:56:00] START: Running container for 11375647
[2025-10-29 11:56:01] SUCCESS: Container 3b5e0a5bda51cccd7ea1b42cb75372ff97f354fe2c86a5886e1d0ed3c929010e started for 11375647
=== Container logs for 11375647 ===
  File "/snippet.py", line 19
    print "You need to specify the name of a variable"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 11375647 ===
[2025-10-29 11:56:03] INFO: Container 3b5e0a5bda51cccd7ea1b42cb75372ff97f354fe2c86a5886e1d0ed3c929010e has stopped
